# GEO-Digest

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_SCRAPLING.md  Caddyfile  DEAD_CODE_REGISTRY.md  DEAD_CODE_REPORT.md  Dockerfile  Dockerfile.dashboard  README.md  ROADMAP.md  _test_imports.py  _test_reader.py  config.yaml  debug_llm.py  docker-compose.yml  pyproject.toml  run_e2e_final.py  run_e2e_scout.py  setup-docker-access.sh
.leankg/: leankg.db
dashboard/: app.py
dashboard/templates/: index.html
docs/diagrams/: pipeline-architecture.html  pipeline-state-machine.html
engine/: __init__.py  api.py  cli.py  config.py  exporter.py  fetcher.py  http_client.py  orchestrator.py  orchestrator_v2.py  schemas.py  scoring.py  utils.py
engine/agents/: __init__.py  article_patterns.py  base.py  editor.py  reader.py  reviewer.py  scout.py  tools.py  writer.py
engine/llm/: __init__.py  base.py  config.py  minimax.py  openai_compat.py  response_parser.py  tool_loop.py
engine/prompts/: editor_prompts.py  (+1 more)
plans/: ARCHITECTURE_REVIEW.md  full-pipeline-integration.md  writer-quality-overhaul.md
scripts/: build_graph.py  check.sh  digest.py  graph_analytics.py  llm_client.py  migrate_add_ids.py  run_manager.py  setup-server.sh  tg_bot.py
tests/: test_e2e.py  test_e2e_full_pipeline.py  test_editor_agent.py  test_editor_api.py  test_graph_integration.py  test_graph_tools.py  test_llm_tool_interface.py  test_orchestrator_v2.py  test_response_parser.py  test_storage_tools.py  test_tool_loop.py  test_tool_registry.py
worker/: Dockerfile  __init__.py  dal.py  server.py
(+28 files in other folders)
