[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "geo-digest"
version = "1.0.0"
description = "Multi-agent engine for automated geo-ecology article writing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GEO-Digest Team"},
]
keywords = ["agent", "llm", "research", "geology", "ecology", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[project.optional-dependencies]
pdf = [
    "PyMuPDF>=1.23",
    "pdfplumber>=0.10",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
all = [
    "geo-digest[pdf,dev]",
]

[project.scripts]
geo-digest = "engine.cli:main"

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.setuptools.package-data]
engine = ["py.typed"]

[tool.r]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
